src/objects/Bypass_Logic__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Bypass_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objects_to_Bypass__c</fullName>
        <label>Objects to Bypass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Bypass Logic</label>
</CustomObject>